# urdb-tariff-viewer_v3

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: utilities_index.parquet
data/tariffs/: PGE_BEV-2-S_2025-09-08.json  Sacramento_Municipal_Utility_District_CI_TOD3_Commercial_and_Industrial_TOD_Secondary_500_999_kW.json  Sacramento_Municipal_Utility_District_CI_TOD4_Commercial_and_Industrial_TOD_Secondary_1000_kW.json  San_Diego_Gas_Electric_Co_AL_TOU_Secondary_Above_500kW.json
docs/: README.md  deployment.md
docs/development/: architecture.md  migration-guide.md  tariff-data-formats.md
docs/user-guide/: openei-import.md  quick-reference.md  tariff-builder.md
requirements/: base.txt
scripts/: deploy.py
src/: main.py
src/components/: __init__.py  cost_calculator.py  demand_rates.py  energy_rates.py  flat_demand_rates.py  rate_editor.py
src/components/load_factor/: __init__.py  analysis.py  calculations.py  ui.py
src/components/tariff_builder_pkg/: __init__.py  main.py  utils.py
src/components/tariff_builder_pkg/sections/: __init__.py  basic_info.py  demand_charges.py  energy_rates.py  fixed_charges.py  preview.py  schedules.py
src/config/: constants.py
src/models/: tariff.py
src/services/: calculation_engine.py  calculation_service.py  tariff_service.py
src/utils/: __init__.py  excel_utils.py  helpers.py  rate_utils.py  schedule_utils.py
tests/: conftest.py
tests/test_models/: test_tariff.py
tests/test_services/: test_file_service.py
urdb_viewer/: __init__.py  main.py
urdb_viewer/components/: __init__.py  cost_calculator.py  demand_rates.py  energy_rates.py  flat_demand_rates.py  load_generator.py  load_profile_analysis.py  rate_editor.py  sidebar.py  tariff_database_search.py  tariff_information.py  visualizations.py
urdb_viewer/components/load_factor/: __init__.py  analysis.py  calculations.py  ui.py
urdb_viewer/components/sidebar/: __init__.py  download.py  file_upload.py  main.py  modification.py  openei_import.py
urdb_viewer/components/tariff_builder_pkg/: __init__.py  main.py  utils.py
urdb_viewer/components/tariff_builder_pkg/sections/: __init__.py  basic_info.py  demand_charges.py  energy_rates.py  fixed_charges.py  preview.py  schedules.py
urdb_viewer/config/: __init__.py  constants.py  settings.py
urdb_viewer/core/: __init__.py  bill_calculator.py
urdb_viewer/models/: __init__.py  load_profile.py  tariff.py
urdb_viewer/services/: __init__.py  calculation_engine.py  calculation_service.py  file_service.py  tariff_database_service.py  tariff_service.py
urdb_viewer/ui/: __init__.py  app_bootstrap.py  cached.py
urdb_viewer/utils/: __init__.py  excel_utils.py  exceptions.py  helpers.py  rate_utils.py  schedule_utils.py  styling.py  validators.py
